# Move

./: .gitignore  CMakeLists.txt  moveS.c
MoveS-Android/: readme.md  settings.gradle  todo.md
MoveS-Android/app/: build.gradle
MoveS-Android/app/src/androidTest/java/com/example/moves_android/: ExampleInstrumentedTest.kt
MoveS-Android/app/src/main/: AndroidManifest.xml
MoveS-Android/app/src/main/java/com/example/moves_android/: MainActivity.kt
MoveS-Android/app/src/main/res/drawable/: box_black.xml  box_blue.xml  box_green.xml  box_red.xml  box_white.xml  circle_blue.xml  circle_green.xml  circle_red.xml
MoveS-Android/app/src/main/res/layout/: activity_main.xml
MoveS-Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
MoveS-Android/app/src/main/res/values-night/: themes.xml
MoveS-Android/app/src/test/java/com/example/moves_android/: ExampleUnitTest.kt
MoveS-Android/gradle/wrapper/: gradle-wrapper.properties
MoveS-Terminal/: CMakeLists.txt  moveS2.c
moveS/: moveS.c
moveS/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
